# okcpuid

./: .Rbuildignore  .configure.ac.swp  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  DESCRIPTION  DESCRIPTION~  LICENSE  NAMESPACE  README.md  cleanup  config.status  configure  configure.ac  reconf
R/: 00-classes.r  00_classes.r  01_constructor.r  01_constructor.r~  02_methods.r  03_accessors.r  arith.r  asserters.r  cpuid.r  flops.r  flops.r~  linpack.r  mhz.r  okcpuid-package.R  printing.r  swaps.r  test.r  util.r  wrappers.r  wrappers_cpuid.r  zzz.r
data/: control.r  environment.r  flops.r  flops.r~
demo/: 00Index  cpuid.r  linpack.r  pbdlinpack.r
inst/doc/: Rcpuid.Rmd  Rcpuid.html
man/: 00-package.Rd  Rcpuid-package.Rd  aa_id.Rd  ba_ins.Rd  ca_clock.Rd  cpu_clock.Rd  cpu_id.Rd  cpu_ins.Rd  flops.Rd  ga_flops.Rd  linpack.Rd  okcpuid-package.Rd  print-MHz.Rd  print-flops.Rd  print-linpack.Rd  print-mhz.Rd  print.Rd  solve_nocopy.Rd  sub-.linpack.Rd  subset-linpack.Rd  subset.Rd  unflop.Rd  za_linpack.Rd  zb_solve_nocopy.Rd
src/: .Makevars.in.swp  .cpuid.h.swp  .hardware_info.c.swp  Makevars  Makevars.in  Makevars.in~  Makevars.win  config.h.in~  cpuid-win.def  cpuid.h  cpuid_test.c  getcores.c  hardware_info.c  hardware_info.c~  linpack.c  node_info.c  platform.h  wrappers.c
src/cpuid/: Makefile  config.h  config.status  libcpuid.pc  libtool
src/cpuid/cpuid_tool/: .cpuid_tool.c.swp  Makefile  Makefile.in  cpuid_tool  raw.txt  report.txt
src/cpuid/example/: .test.c.swp  a.out  mk  test.c
src/cpuid/libcpuid/: Makefile  (+13 more)
vignettes/: rebuild
(+16 files in other folders)
