## autoconf configure.ac && autoreconf -if

AC_PREREQ([2.69])
AC_INIT([cpuid], [0.1.0])
AC_CONFIG_SRCDIR([src/hardware_info.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdint.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
#AC_CHECK_FUNCS([sqrt])

#AC_CONFIG_SUBDIRS([src/sunbathe])
AC_OUTPUT(src/Makevars)

